# cmpe-492

./: README.md  config.py  main.py  test.ipynb
main-app/: analyzer.ipynb  analyzer.py  analyzer_for_multi.py  config.py  generated_scenarios.json  main.py  main_with_multi.py  multiagent_architecture.py  multiagent_characters.py  single_agent_with_rag.py
moral_machine_data_analysis/: all_responses_analysis.ipynb  all_responses_percentages.ipynb  first_sessions_analysis.ipynb  no_legality.ipynb  survey_responses.ipynb
week1-app-asim/: .env  db.sqlite3  manage.py
week1-app-buse/: app.py  requirements.txt
week10-multi-app/: config.json  main.py  scenarios.json  single_agent.py
week10-single-agent-app/: config.json  main.py  scenario_responses_with_roles.csv  single_agent.py
week11-main-app/: main.py  multi_agent.py  scenario_responses.csv  scenario_results.csv  scenarios.json  tester.py
week2-app-buse/: calculate_bert_score.py  main.py
week2=app-asim/: main.py
week3-buse/: app.py  retrieval_aug_promp.py
week4/: chatbot_roles_collaboration.ipynb  test.ipynb
week4-app-asim/: main.py
week4-app-buse/: chatbot_roles_supervision.ipynb
weekly-progress/week8-crewai/debate_team/: jury_decision.md  pyproject.toml  team1_arguments.md  team1_final.md  team1_research.md  team2_arguments.md  team2_final.md
weekly-progress/week8-crewai/debate_team/src/debate_team/: team_crew.py
weekly-progress/week8-crewai/debate_team/src/debate_team/config/: agents.yaml  sequential_agents.yaml  sequential_tasks.yaml  tasks.yaml  team_agents.yaml  team_tasks.yaml
(+282 files in other folders)
