[project]
name = "debate_team"
version = "0.1.0"
description = "debate_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
debate_team = "debate_team.main:run"
run_crew = "debate_team.main:run"
train = "debate_team.main:train"
replay = "debate_team.main:replay"
test = "debate_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
